HTTPS, gitlab auth experiment, utilities, and some web improvements.
